# soroban-verifier-gen

./: .gitmodules  Cargo.toml  README.md
examples/: generate_verifier.rs
examples/data/bn254/: proof.json  verification_key.json
examples/my_verifier/: Cargo.toml
examples/my_verifier/src/: lib.rs
examples/my_verifier/tests/: test.rs
my_verifier_bls12-381/: Cargo.toml
my_verifier_bls12-381/src/: lib.rs  test.rs
my_verifier_bn254/: Cargo.toml
my_verifier_bn254/src/: lib.rs  test.rs
src/: lib.rs  main.rs
