[package]
name = "soroban-verifier-gen"
version = "0.1.2"
edition = "2024"
authors = ["Sergey Sobolev"]
description = "Generate Soroban smart contracts for Groth16 zero-knowledge proof verification"
license = "MIT"
repository = "https://github.com/mysteryon88/soroban-verifier-gen"
homepage = "https://github.com/mysteryon88/soroban-verifier-gen"
keywords = ["soroban", "stellar", "groth16", "zk-proof", "zksnark"]
categories = ["cryptography", "no-std", "algorithms"]
readme = "README.md"
resolver = "2"

include = [
  "src/**",
  "README.md",
  "LICENSE*",
  "Cargo.toml",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ark-bls12-381 = "0.5"
ark-bn254 = "0.5"
ark-serialize = "0.5"
ark-ff = "0.5"
